--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,26 @@ current_dir_info:
     - ls -lRh
   stage: setup
 
+pkg_env_setup:
+  script:
+    - ls -lh ~/.julia/dev/
+    - cat ~/.julia/dev/*/Project.toml
+    - julia -e "using Pkg; pkg\"rm BenchmarkTools\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysBase\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysUnitcellLibrary\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysLatticeConstruction\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysReciprocal\";"
+    - julia -e "using Pkg; pkg\"rm LatticePhysics\";"
+    - julia -e "using Pkg; pkg\"gc\""
+    - julia -e "using Pkg; pkg\"resolve\""
+    - julia -e "using Pkg; pkg\"st\";"
+    - rm -rf ~/.julia/dev/*
+    - julia -e "using Pkg; pkg\"up\";"
+    - julia -e "using Pkg; pkg\"st\";"
+    - julia -e "using Pkg; pkg\"gc\";"
+  stage: setup
+
+
 #---------------------------------------
 #    STAGE: julia_pkg_setup
 #    --> add packages to julia env
