--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,11 @@ pkg_env_setup:
     - julia -e "using Pkg; pkg\"rm LatPhysBase\";"
     - julia -e "using Pkg; pkg\"rm LatPhysUnitcellLibrary\";"
     - julia -e "using Pkg; pkg\"rm LatPhysLatticeConstruction\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysLuttingerTisza\";"
     - julia -e "using Pkg; pkg\"rm LatPhysReciprocal\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysPlottingPyPlot\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysReciprocalPlottingPyPlot\";"
+    - julia -e "using Pkg; pkg\"rm LatPhysLuttingerTiszaPlottingPyPlot\";"
     - julia -e "using Pkg; pkg\"rm LatticePhysics\";"
     - julia -e "using Pkg; pkg\"gc\""
     - julia -e "using Pkg; pkg\"resolve\""
